--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "homepage": "https://github.com/lbiv4/fantasy-football-slackbot#readme",
   "dependencies": {
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
